<resources>
    <string name="app_name">Fedoryshchev LB1 </string>
    <string name="action_settings">Settings</string>
    <string name="confirm_title">Removing note</string>
    <string name="confirm_text">Are you sure you want delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="filter">Filter</string>
    <string name="remove_filters">Remove filters</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>

</resources>
