<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ua.nure.fedoryshchev.lb2.models.NoteViewModel" />
        <variable
            name="importance"
            type="ua.nure.fedoryshchev.lb2.models.Importance" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NoteActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewIconEditor"
                    android:layout_width="247dp"
                    android:layout_height="214dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:onClick="selectImage"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_title"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.Note.Title}" />

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="129dp"
                    android:ems="10"
                    android:foregroundGravity="top"
                    android:hint="@string/enter_description"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.Note.Description}" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonLowImportance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.Note.Importance.equals(importance.Low)}"
                        android:onClick="@{() -> viewModel.setImportance(importance.Low)}"
                        android:text="@string/low" />

                    <RadioButton
                        android:id="@+id/radioButtonMediumImportance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.Note.Importance.equals(importance.Medium)}"
                        android:onClick="@{() -> viewModel.setImportance(importance.Medium)}"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/radioButtonHighImportance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.Note.Importance.equals(importance.High)}"
                        android:onClick="@{() -> viewModel.setImportance(importance.High)}"
                        android:text="@string/high" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>